--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </div>
                     <nav>   
                         <ul>
-                            <li><a href="#">Hébergements</a></li>
-                            <li><a href="#">Activités</a></li>
-                            <li><a href="#">S'inscrire</a></li>
+                            <li><a href="#hebergement">Hébergements</a></li>
+                            <li><a href="#activite">Activités</a></li>
+                            <li><a href="#inscription">S'inscrire</a></li>
                         </ul>
                     </nav>
                 </header>
@@ -38,23 +38,195 @@
                         <li>Romantique</li>
                         <li>Animaux autorisés</li>    
                     </ul>
+                    <i class="fas fa-info-circle"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 <section id="section1">
                     <article>
-                        <h1>Hébergements à Marseille</h1>
-                        <section id="canne">
-                        <div class="cannebiere"></div>
-                        <ul>
-                            <li>Auberge la Cannebière</li>
-                            <li>Nuit à partir de 25€</li>
-                            <li><i class=""></i></li>
-                        </ul>
+                        <h1 id="hebergement">Hébergements à Marseille</h1>
+<!--Hébergements bloc-->                       
+                        <section id="HT">
+<!--Hébergements Haut-->                       
+                        <section id="HH">
+        <!--Auberge la Cannebière-->                    
+                            <div class="cannebiere">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/canne1.jpg" alt="Cannebière"/>
+                                    <li>Auberge la Cannebière</li>
+                                    <li>Nuit à partir de 25€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>                            
+                                </ul>
+                            </div>
+        <!--Hôtel du port-->                        
+                            <div class="port">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/port1.jpg" alt="Port"/>
+                                    <li>Hôtel du port</li>
+                                    <li>Nuit à partir de 52€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+
+
+                                </ul>
+                            </div>
+        <!--Hôtel Les mouettes-->                            
+                            <div class="mouettes">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/mouettes1.jpg" alt="Les mouettes"/>
+                                    <li>Hôtel Les mouettes</li>
+                                    <li>Nuit à partir de 76€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>                            
+                            </ul>
+                            </div>
+                        </section>
+<!--Hébergements Bas-->
+                        <section id="HB">
+        <!--Hôtel de la mer-->                            
+                            <div class="mer">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/mer1.jpg" alt="Hotel de la mer"/>
+                                    <li>Hôtel de la mer</li>
+                                    <li>Nuit à partir de 46€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </ul>
+                            </div>
+        <!--Auberge Le Pannier-->                            
+                            <div class="panier">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/pannier1.jpg" alt="Auberge Pannier"/>
+                                    <li>Auberge Le Panier</li>
+                                    <li>Nuit à partir de 26€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </ul>
+                            </div>
+        <!--Hôtel chez Amina-->                            
+                            <div class="panier">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/amina1.jpg" alt="Hotel Amina"/>
+                                    <li>Hôtel chez Amina</li>
+                                    <li>Nuit à partir de 96€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </ul>
+                            </div>
+                            <p>Afficher plus</p>
+                        </section>
                         </section>
                     </article>
-                    <aside></aside>
+                    <aside>
+                        <section id="aside">
+                            <h1 id="populaires">Les plus populaires</h1>
+                            <i class="fas fa-chart-line"></i>
+        <!--Hôtel Le soleil du matin-->                    
+                            <div class="soleil">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/soleil1.jpg" alt="soleil"/>
+                                    <li>Hôtel Le soleil du matin</li>
+                                    <li>Nuit à partir de 128€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </ul>
+                            </div>
+        <!--Au coeur de l'eau-->                    
+                            <div class="eau">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/eau1.jpg" alt="eau"/>
+                                    <li>Au coeur de l'eau</li>
+                                    <li>Nuit à partir de 71€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </ul>
+                            </div>
+        <!--Hôtel Tout bleu et blanc-->
+                            <div class="bleu">
+                                <ul>
+                                    <img src="P2_reservia/images/hebergements1/small/bleu1.jpg" alt="bleu et blanc"/>
+                                    <li>Hôtel Tout bleu et blanc</li>
+                                    <li>Nuit à partir de 68€</li>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </ul>
+                            </div>
+                       </section>    
+                    </aside>
                 </section>
-                <section></section>
-                <footer></footer>
+                    <section id="section2">
+                        <h1 id="activite">Activités à Marseille</h1>
+                            <div id="vieux">
+                                <img src="P2_reservia/images/activites1/small/vieux1.jpg" alt="vieux port" />
+                                <p>Vieux Port</p>
+                            </div>
+                            <div id="fort">
+                                <img src="P2_reservia/images/activites1/small/fort1.jpg" alt="Fort" />
+                                <p>Fort de Pomègues</p>
+                            </div>
+                            <div id="frioul">
+                                <img src="P2_reservia/images/activites1/small/frioul1.jpg" alt="Frioul" />
+                                <p>Fort de Pomègues</p>
+                            </div>
+                            <div id="calanques">
+                                <img src="P2_reservia/images/activites1/small/calanques1.jpg" alt="Calanques" />
+                                <p>Parc National des Calanques</p>
+                            </div>
+                            <div id="dame">
+                                <img src="P2_reservia/images/activites1/small/dame1.jpg" alt="Notre Dame" />
+                                <p>Notre-Dame-de-la-Garde</p>
+                            </div>
+                            <div id="long">
+                                <img src="P2_reservia/images/activites1/small/longchamp1.jpg" alt="Longchamp" />
+                                <p>Parc Longchamp</p>
+                            </div>
+                    </section>
+                <footer>
+                    <div id="foot">
+                        <div id="text1">
+                            <h2>A propos</h2>
+                            <li>Fonctionnement du site</li>
+                            <li>Conditions générales de vente</li>
+                            <li>Données et confidentialité</li>
+                        </div>
+                        <div id="text2">
+                            <h2>Nos hébergements</h2>
+                            <li>Charte de qualité</li>
+                            <li>Soumettre votre hôtel</li>
+                        </div>
+                        <div id="text3">
+                            <h2>Assistance</h2>
+                            <li>Centre d'aide</li>
+                            <li>Nous contacter</li>
+                        </div>
+                    </div>
+                </footer>
         </div>
     </body>
 </html>
