--- a/index.html
+++ b/index.html
@@ -11,35 +11,40 @@
         <div id="bloc-page">
             <header>
                 <div id="titre_principal">
-                    <div id="logo">
-                        <img src="P2_reservia/images/logo/Reservia@3x.png" alt="Logo Reservia"/>
+                        <span id="logo"><img src="P2_reservia/images/logo/Reservia@3x.png" alt="Logo Reservia"/></span>
+                        <nav>                           
+                            <ul class="puce">
+                                
+                                <li><a href="#hebergement">Hébergements</a></li>
+                                <li><a href="#activite">Activités</a></li>
+                                <li><a href="#inscription">S'inscrire</a></li>
+                               
+                            </ul>                          
+                        </nav><br>
                         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                    </div>
-                    <h2>En plein centre ville ou en pleine nature</h2>
+                    <p>En plein centre ville ou en pleine nature</p>
                 </div>
                 <div class="recherche">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <p>Marseille,France </p>
-                    <span>Rechercher</span>
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>Marseille,France </p>
+                        <span>Rechercher</span>
                 </div>
-                    <nav>   
-                        <ul>
-                            <li><a href="#hebergement">Hébergements</a></li>
-                            <li><a href="#activite">Activités</a></li>
-                            <li><a href="#inscription">S'inscrire</a></li>
-                        </ul>
-                    </nav>
                 </header>
                 <nav>
                     <h2>Filtres</h2>
                     <ul>
-                        <li>Economique</li>
-                        <li>Familial</li>
-                        <li>Romantique</li>
-                        <li>Animaux autorisés</li>    
+                        <li><i class="fas fa-money-bill-wave"></i>
+                            <p>Economique</p></li>
+                        <li><i class="fas fa-child"></i>
+                            <p>Familial</p></li>
+                        <li><i class="fas fa-heart"></i>
+                            <p>Romantique</p></li>
+                        <li><i class="fas fa-dog"></i>
+                            <p>Animaux autorisés</p></li>    
                     </ul>
                     <i class="fas fa-info-circle"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </nav>
                 <section id="section1">
                     <article>
                         <h1 id="hebergement">Hébergements à Marseille</h1>
@@ -211,19 +216,25 @@
                     <div id="foot">
                         <div id="text1">
                             <h2>A propos</h2>
+                            <ul>
                             <li>Fonctionnement du site</li>
                             <li>Conditions générales de vente</li>
                             <li>Données et confidentialité</li>
+                            </ul>
                         </div>
                         <div id="text2">
                             <h2>Nos hébergements</h2>
+                            <ul>
                             <li>Charte de qualité</li>
                             <li>Soumettre votre hôtel</li>
+                            </ul>
                         </div>
                         <div id="text3">
                             <h2>Assistance</h2>
+                            <ul>
                             <li>Centre d'aide</li>
                             <li>Nous contacter</li>
+                            </ul>
                         </div>
                     </div>
                 </footer>
