--- a/index.html
+++ b/index.html
@@ -174,42 +174,48 @@
                                     <img src="P2_reservia/images/hebergements1/small/soleil1.jpg" alt="soleil"/>
                                     <div class="popucontent">
                                     <li><span class="bol">Hôtel Le soleil du matin</span></li>
-                                    <li>Nuit à partir de 128€</li>
+                                    <li><span class="nuit">Nuit à partir de 128€</span></li>
+                                    <div class="star">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
+                                    </div>
                                     </div>
                                 </ul>
                             </div>
         <!--Au coeur de l'eau-->                    
-                            <div class="eau">
+                            <div class="soleil">
                                 <ul>
                                     <img src="P2_reservia/images/hebergements1/small/eau1.jpg" alt="eau"/>
                                     <div class="popucontent">
-                                    <li>Au coeur de l'eau</li>
-                                    <li>Nuit à partir de 71€</li>
+                                    <li><span class="bol">Au coeur de l'eau Chambres d'hôtes</span></li>
+                                    <li><span class="nuit">Nuit à partir de 71€</span></li>
+                                    <div class="star">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="far fa-star"></i>
                                     </div>
+                                    </div>
                                 </ul>
                             </div>
         <!--Hôtel Tout bleu et blanc-->
-                            <div class="bleu">
+                            <div class="soleil">
                                 <ul>
                                     <img src="P2_reservia/images/hebergements1/small/bleu1.jpg" alt="bleu et blanc"/>
                                     <div class="popucontent">
-                                    <li>Hôtel Tout bleu et blanc</li>
-                                    <li>Nuit à partir de 68€</li>
+                                    <li><span class="bol">Hôtel Tout bleu et blanc</span></li>
+                                    <li><span class="nuit">Nuit à partir de 68€</span></li>
+                                    <div class="star">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="far fa-star"></i>
+                                    </div>
                                     </div>
                                 </ul>
                             </div>
