--- a/index.html
+++ b/index.html
@@ -224,57 +224,63 @@
                 </section>
                     <section id="section2">
                         <h1 id="activite">Activités à Marseille</h1>
-                            <div id="vieux">
-                                <img src="P2_reservia/images/activites1/small/vieux1.jpg" alt="vieux port" />
+                            <div id="pic">
+                            <div class="grand">
+                                <img src="P2_reservia/images/activites1/small/vieux1.jpg" alt="vieux port" /><br>
                                 <p>Vieux Port</p>
                             </div>
+                            <div class="combo">
                             <div id="fort">
-                                <img src="P2_reservia/images/activites1/small/fort1.jpg" alt="Fort" />
+                                <img src="P2_reservia/images/activites1/small/fort1.jpg" alt="Fort" /><br>
                                 <p>Fort de Pomègues</p>
                             </div>
                             <div id="frioul">
-                                <img src="P2_reservia/images/activites1/small/frioul1.jpg" alt="Frioul" />
-                                <p>Fort de Pomègues</p>
+                                <img src="P2_reservia/images/activites1/small/frioul1.jpg" alt="Frioul" /><br>
+                                <p>Îles du Frioul</p>
                             </div>
-                            <div id="calanques">
-                                <img src="P2_reservia/images/activites1/small/calanques1.jpg" alt="Calanques" />
+                            </div>
+                            <div class="grand">
+                                <img src="P2_reservia/images/activites1/small/calanques1.jpg" alt="Calanques" /><br>
                                 <p>Parc National des Calanques</p>
                             </div>
-                            <div id="dame">
-                                <img src="P2_reservia/images/activites1/small/dame1.jpg" alt="Notre Dame" />
+                            <div class="combo2">
+                            <div class="petit">
+                                <img src="P2_reservia/images/activites1/small/dame1.jpg" alt="Notre Dame" /><br>
                                 <p>Notre-Dame-de-la-Garde</p>
                             </div>
-                            <div id="long">
-                                <img src="P2_reservia/images/activites1/small/longchamp1.jpg" alt="Longchamp" />
+                            <div class="petit2">
+                                <img src="P2_reservia/images/activites1/small/longchamp1.jpg" alt="Longchamp" /><br>
                                 <p>Parc Longchamp</p>
                             </div>
+                            </div>
                     </section>
+            </div>
                 <footer>
                     <div id="foot">
-                        <div id="text1">
+                        <div class="text1">
                             <h2>A propos</h2>
                             <ul>
-                            <li>Fonctionnement du site</li>
-                            <li>Conditions générales de vente</li>
-                            <li>Données et confidentialité</li>
+                            <li>Fonctionnement du site</li><br>
+                            <li>Conditions générales de vente</li><br>
+                            <li>Données et confidentialité</li><br>
                             </ul>
                         </div>
-                        <div id="text2">
+                        <div class="text2">
                             <h2>Nos hébergements</h2>
                             <ul>
-                            <li>Charte de qualité</li>
-                            <li>Soumettre votre hôtel</li>
+                            <li>Charte de qualité</li><br>
+                            <li>Soumettre votre hôtel</li><br>
                             </ul>
                         </div>
-                        <div id="text3">
+                        <div class="text3">
                             <h2>Assistance</h2>
                             <ul>
-                            <li>Centre d'aide</li>
-                            <li>Nous contacter</li>
+                            <li>Centre d'aide</li><br>
+                            <li>Nous contacter</li><br>
                             </ul>
                         </div>
                     </div>
+        
                 </footer>
-        </div>
     </body>
 </html>
