--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             <header>
                 <div id="titre_principal">
                         <span id="logo"><img src="P2_reservia/images/logo/Reservia@3x.png" alt="Logo Reservia"/></span>
-                        <nav>                           
+                        <nav class="nv">                           
                             <ul class="puce">
-                            
-                                <li class="hov"><a class="bcolor" href="#hebergement">Hébergements</a></li>
-                                <li class="hov"><a class="bcolor" href="#activite">Activités</a></li>
+                            <div id="blo">
+                                <li class="hov" id="medheb"><a class="bcolor" href="#hebergement">Hébergements</a></li>
+                                <li class="hov" id="medact"><a class="bcolor" href="#activite">Activités</a></li>
+                            </div>
                                 <li><a id="ins" href="#inscription">S'inscrire</a></li>
                                
                             </ul>                          
