--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
                             <ul class="puce">
                             <div id="blo">
                                 <li class="hov" id="medheb"><a class="bcolor" href="#hebergement">Hébergements</a></li>
-                                <li class="hov" id="medact"><a class="bcolor" href="#activite">Activités</a></li>
+                                <li class="hov"><a class="bcolor" id="medact" href="#activite">Activités</a></li>
                             </div>
                                 <li><a id="ins" href="#inscription">S'inscrire</a></li>
                                
                             </ul>                          
                         </nav><br>
-                        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                    <p>En plein centre ville ou en pleine nature</p>
+                        <h1 id="titreVac">Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p id="centreVille">En plein centre ville ou en pleine nature</p>
                 </div>
                 <div class="search">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i id="gps1" class="fas fa-map-marker-alt"></i>
                         <p id="test"><strong>Marseille, France</strong> </p>
-                        <p><span>Rechercher</span></p>                      
+                        <p><span id="rech">Rechercher</span><i class="fas fa-search"></i></p>
+                                           
                 </div>
                 </header>
                 <nav>
