--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <section class="loge">  
                     <i class="fas fa-info"></i>
-                    <p id="log1">Plus de 500 logements sont disponibles <span id="dans">dans cette ville</span></p>
+                    <p id="log1">Plus de 500 logements sont disponibles dans cette ville</p>
                 </section>    
                 </nav>
             <section class="allm">
