--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="search">
                         <i id="gps1" class="fas fa-map-marker-alt"></i>
-                        <p id="test"><strong>Marseille, France</strong> </p>
+                        <p id="mars"><strong>Marseille, France</strong> </p>
                         <p><span id="rech">Rechercher</span><i class="fas fa-search"></i></p>
                                            
                 </div>
