--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                 </div>
                 <div class="search">
                         <i id="gps1" class="fas fa-map-marker-alt"></i>
-                        <p id="mars"><strong>Marseille, France</strong> </p>
-                        <p><span id="rech">Rechercher</span><i class="fas fa-search"></i></p>
+                        <input class="search-bar" type="search" placeholder="Marseille, France" size="1">
+                        <button class="button-search">
+                        <span class="button-rechercher">Rechercher</span>
+                        <i class="fas fa-search loupe"></i>
+                        </button>
                                            
                 </div>
                 </header>
