--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
         <div id="bloc-page">
             <header>
                 <div id="titre_principal">
+                    <div class="title-head">
                         <span id="logo"><img src="P2_reservia/images/logo/Reservia@3x.png" alt="Logo Reservia"/></span>
-                        <nav class="nv">                           
+                                                                    
                             <div class="puce">
                             <div id="blo">
                                 <div class="hov" id="medheb"><a class="bcolor" href="#hebergement">Hébergements</a></div>
                                 <div class="hov"><a class="bcolor" id="medact" href="#activite">Activités</a></div>
                             </div>
                                 <a id="ins" href="#inscription">S'inscrire</a>
-                               
+                            </div>   
                             </div>                          
-                        </nav><br>
+                        <br>
                         <h1 id="titreVac">Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p id="centreVille">En plein centre ville ou en pleine nature</p>
                 </div>
