--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                                 <div class="hov" id="medheb"><a class="bcolor" href="#hebergement">Hébergements</a></div>
                                 <div class="hov"><a class="bcolor" id="medact" href="#activite">Activités</a></div>
                             </div>
+                            <div class="inscrip">
                                 <a id="ins" href="#inscription">S'inscrire</a>
+                            </div>
                             </div>   
                             </div>                          
                         <br>
