--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             <header>
                 <div id="titre_principal">
                     <div class="title-head">
-                        <span id="logo"><img src="P2_reservia/images/logo/Reservia@3x.png" alt="Logo Reservia"/></span>
-                                                                    
-                            <div class="puce">
+                        <span id="logo"><img src="P2_reservia/images/logo/Reservia@3x.png" alt="Logo Reservia"/></span>                                                                    
                             <div id="blo">
                                 <div class="hov" id="medheb"><a class="bcolor" href="#hebergement">Hébergements</a></div>
                                 <div class="hov"><a class="bcolor" id="medact" href="#activite">Activités</a></div>
@@ -22,8 +20,7 @@
                             <div class="inscrip">
                                 <a id="ins" href="#inscription">S'inscrire</a>
                             </div>
-                            </div>   
-                            </div>                          
+                            </div>                             
                         <br>
                         <h1 id="titreVac">Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p id="centreVille">En plein centre ville ou en pleine nature</p>
@@ -230,40 +227,40 @@
                     <section id="section2">
                         <h1 id="activite">Activités à Marseille</h1>
                             <div id="pic">
-                            <a href="#" class="link-module">
-                                <div class="grand">                                
+                            <a href="#" class="link-act">
+                                <div class="grand" id="port-marg">                                
                                         <img src="P2_reservia/images/activites1/small/vieux1.jpg" alt="vieux port" /><br>
                                         <p>Vieux Port</p>
                                 </div>
                             </a>
                         <div class="combo">
-                            <a href="#" class="link-module">
+                            <a href="#" class="link-act">
                                 <div id="fort">                                   
                                         <img src="P2_reservia/images/activites1/small/fort1.jpg" alt="Fort" /><br>
                                         <p>Fort de Pomègues</p>                                   
                                 </div>
                             </a> 
-                            <a href="#" class="link-module"> 
+                            <a href="#" class="link-act"> 
                                 <div id="frioul">                                   
                                         <img src="P2_reservia/images/activites1/small/frioul1.jpg" alt="Frioul" /><br>
                                         <p>Îles du Frioul</p>                                   
                                 </div>
                             </a>    
                         </div>
-                        <a href="#" class="link-module">
+                        <a href="#" class="link-act">
                                 <div class="grand">                                   
                                         <img src="P2_reservia/images/activites1/small/calanques1.jpg" alt="Calanques" /><br>
                                         <p>Parc National des Calanques</p>                                   
                                 </div>
                         </a>
                                 <div class="combo2">
-                        <a href="#" class="link-module">
+                        <a href="#" class="link-act">
                                 <div class="dame">                                   
                                         <img src="P2_reservia/images/activites1/small/dame1.jpg" alt="Notre Dame" /><br>
                                         <p>Notre-Dame-de-la-Garde</p>                                   
                                 </div>
                         </a>
-                        <a href="#" class="link-module">
+                        <a href="#" class="link-act">
                                 <div class="longchamp">                                    
                                        <img src="P2_reservia/images/activites1/small/longchamp1.jpg" alt="Longchamp" /><br>
                                         <p>Parc Longchamp</p>                                
