--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="fr">
 <html>
     <head>
         <meta charset="utf-8">
@@ -67,12 +67,14 @@
                         </a> 
                         </div>                  
                    
-                <section class="loge">  
+                <section class="loge">
+                    <h1 class="hidden">logements</h1>  
                     <i class="fas fa-info"></i>
                     <p id="log1">Plus de 500 logements sont disponibles dans cette ville</p>
                 </section>    
                 </nav>
             <section class="allm">
+                <h1 class="hidden">activites</h1>
                 <section class="section1">
                         <h2 id="hebergement">Hébergements à Marseille</h2> 
 <!--Hébergements bloc-->                       
@@ -225,7 +227,7 @@
                     </aside>
                 </section>
                     <section id="section2">
-                        <h1 id="activite">Activités à Marseille</h1>
+                        <h2 id="activite">Activités à Marseille</h2>
                             <div id="pic">
                             <a href="#" class="link-act">
                                 <div class="grand" id="port-marg">                                
