--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html lang="fr">
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -67,14 +67,12 @@
                         </a> 
                         </div>                  
                    
-                <section class="loge">
-                    <h1 class="hidden">logements</h1>  
+                <section class="loge">  
                     <i class="fas fa-info"></i>
                     <p id="log1">Plus de 500 logements sont disponibles dans cette ville</p>
                 </section>    
                 </nav>
             <section class="allm">
-                <h1 class="hidden">activites</h1>
                 <section class="section1">
                         <h2 id="hebergement">Hébergements à Marseille</h2> 
 <!--Hébergements bloc-->                       
