--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                         </a> 
                         </div>                  
                    
-                <section class="loge">  
+                <div class="loge">  
                     <i class="fas fa-info"></i>
                     <p id="log1">Plus de 500 logements sont disponibles dans cette ville</p>
-                </section>    
+                </div>    
                 </nav>
             <section class="allm">
-                <section class="section1">
+                <div class="section1">
                         <h2 id="hebergement">Hébergements à Marseille</h2> 
 <!--Hébergements bloc-->                       
                         
@@ -172,8 +172,8 @@
                                     <a href="#" class="link-module">
                                         <p id="Afficher">Afficher plus</p>
                                     </a>
-                </section>                    
-                    <aside>
+                </div>                    
+                <aside>
                             <h2 class="populaires">Les plus populaires
                             <i class="fas fa-chart-line"></i>
                             </h2>
